style: fix tour text color on dark mode switching

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -84,6 +84,6 @@
   background-color: #1a1c24 !important;
   border-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-  color: #fff;
+  color: #fff !important;
   border: 1px solid gray;
 }
